# substrate_t

client/authority-discovery/: Cargo.toml
client/beefy/: Cargo.toml
client/cli/: Cargo.toml
client/consensus/aura/: Cargo.toml
client/consensus/babe/: Cargo.toml
client/consensus/babe/rpc/: Cargo.toml
client/db/: Cargo.toml
client/executor/: Cargo.toml
client/executor/wasmtime/: Cargo.toml
client/keystore/: Cargo.toml
client/network/: Cargo.toml
client/network/bitswap/: Cargo.toml
client/network/light/: Cargo.toml
client/network/sync/: Cargo.toml
client/network/transactions/src/: lib.rs
client/service/: Cargo.toml
client/service/test/: Cargo.toml
frame/contracts/: Cargo.toml
frame/contracts/primitives/: Cargo.toml
frame/contracts/src/: lib.rs  storage.rs  tests.rs  weights.rs
frame/merkle-mountain-range/: Cargo.toml
frame/support/procedural/: Cargo.toml
primitives/core/: Cargo.toml
utils/frame/benchmarking-cli/: Cargo.toml
utils/wasm-builder/: Cargo.toml
